# Generator

./: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  widget.ui
